Added image Hello World

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     },
     //"editor.defaultFormatter": "charliermarsh.ruff"
      "editor.defaultFormatter": "ms-python.black-formatter"
-  }
+  },
+  "livePreview.defaultPreviewPath": "/index.html"
 }
